<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    
    <ListPreference
        android:key="@string/pref_sort_by"
        android:title="Sort By"
        android:summary="Field to sort tuna melts by"
        android:entries="@array/sort_by_options"
        android:entryValues="@array/sort_by_values"
        android:dialogTitle="Sort By"
        android:defaultValue="restaurant"
    />
    
    <ListPreference
        android:key="@string/pref_sort_order"
        android:title="Sort By"
        android:summary="Order for sorting"
        android:entries="@array/sort_order_options"
        android:entryValues="@array/sort_order_values"
        android:dialogTitle="Sort Order"
        android:defaultValue="ascending"
    />
    
    <CheckBoxPreference
        android:key="@string/pref_dummy_data"
        android:title="Dummy Data"
        android:summary="Select to create dummy data for debugging"
        android:defaultValue="true"
    />
  
  
</PreferenceScreen>
