<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainDebugSendData"
    >
      
    <!-- recipient name -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/recipient_name" />

        <EditText
            android:id="@+id/recipient_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse" />
    </LinearLayout>
    
    <!-- recipient email -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/recipient_email"
        />

        <EditText
            android:id="@+id/recipient_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:width="100dp"
            android:gravity="start"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.Holo.Small.Inverse" />
    </LinearLayout>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:gravity="center"
		android:text="@string/send_button_text"
		android:onClick="sendTunaMeltData"
        android:background="#4286f4"
	/>
	   
</LinearLayout>
    
   
    
    
   

